--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -1,13 +1,15 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-override_activate_immigration_desc;Building province selectors will force people to move out of the province towards provinces with an immigrator. Decisions can be used to manipulate whether accepted pops or non-accepted pops will move, and whether to colonial or non-colonial provinces. Beware though: When province selectors are active, the population will quickly grow rebellious, and the economy in expulsion regions will come to a grinding halt.;;;;;;;;;;;;;x
-override_activate_immigration_title;Activate Direct Immigration;;;;;;;;;;;;;x
-override_direct_immigration_move_accepted_pops_desc;Configure the Direct Immigration mechanic to move accepted pops.;;;;;;;;;;;;;x
+override_activate_immigration_desc;Building province selectors will force people to move out of the province towards provinces with an immigrator. Decisions can be used to manipulate whether accepted pops or non-accepted pops will move, and whether to colonial or non-colonial provinces. Beware though: Province selector maximum is FIVE buildings at any one time. When province selectors are active, the population will quickly grow rebellious, and the economy in expulsion regions will come to a grinding halt.;;;;;;;;;;;;;x
+override_activate_immigration_title;Start a Direct Immigration Campaign;;;;;;;;;;;;;x
+override_direct_immigration_move_primary_pops_desc;Configure the Direct Immigration mechanic to move PRIMARY pops. You are currently focusing NON ACCEPTED pops.;;;;;;;;;;;;;x
+override_direct_immigration_move_primary_pops_title;Direct Immigration: Move Primary Pops;;;;;;;;;;;;;x
+override_direct_immigration_move_accepted_pops_desc;Configure the Direct Immigration mechanic to move ACCEPTED pops. You you are currently focusing PRIMARY pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_accepted_pops_title;Direct Immigration: Move Accepted Pops;;;;;;;;;;;;;x
-override_direct_immigration_move_non_accepted_pops_desc;Configure the Direct Immigration mechanic to move non-accepted pops.;;;;;;;;;;;;;x
+override_direct_immigration_move_non_accepted_pops_desc;Configure the Direct Immigration mechanic to move NON-ACCEPTED pops. You are currently focusing ACCEPTED pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_non_accepted_pops_title;Direct Immigration: Move Non-Accepted Pops;;;;;;;;;;;;;x
-override_direct_immigration_move_pops_internally_desc;Configure the Direct Immigration mechanic to move pops to non-colonial provinces.;;;;;;;;;;;;;x
+override_direct_immigration_move_pops_internally_desc;Configure the Direct Immigration mechanic to move pops to non-colonial provinces. You are currently focusing on state to COLONIAL province migration.;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_internally_title;Direct Immigration: Move Pops Internally;;;;;;;;;;;;;x
-override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immigration mechanic to move pops to colonial provinces.;;;;;;;;;;;;;x
+override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immigration mechanic to move pops to colonial provinces. You are currently focusing state to STATE (internal) migration.;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_to_colonies_title;Direct Immigration: Move Pops to Colonies;;;;;;;;;;;;;x
 override_immigrant_options_desc;Select the options that you want for immigration!;;;;;;;;;;;;;x
 override_immigrant_options_title;Immigration Options;;;;;;;;;;;;;x
