--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -7,6 +7,10 @@ override_direct_immigration_move_accepted_pops_desc;Configure the Direct Immigra
 override_direct_immigration_move_accepted_pops_title;Direct Immigration: Move Accepted Pops;;;;;;;;;;;;;x
 override_direct_immigration_move_non_accepted_pops_desc;Configure the Direct Immigration mechanic to move NON-ACCEPTED pops. You are currently focusing ACCEPTED pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_non_accepted_pops_title;Direct Immigration: Move Non-Accepted Pops;;;;;;;;;;;;;x
+override_direct_immigration_move_not_state_religion_desc;Configure the Direct Immigration mechanic to move pops that are NOT your state religion. WARNING: Do not use this in combination with culture decisions above (keep focus at non-accepted).;;;;;;;;;;;;;x
+override_direct_immigration_move_not_state_religion_title;Direct Immigration: Move Non-Accepted Religion;;;;;;;;;;;;;x 
+override_direct_immigration_move_not_state_religion_disable_desc;Configure the Direct Immigration mechanic to stop moving not accepted religion.;;;;;;;;;;;;;x
+override_direct_immigration_move_not_state_religion_disable_title;Direct Immigration: Stop the Religious campaign;;;;;;;;;;;;;x 
 override_direct_immigration_move_pops_internally_desc;Configure the Direct Immigration mechanic to move pops to non-colonial provinces. You are currently focusing on state to COLONIAL province migration.;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_internally_title;Direct Immigration: Move Pops Internally;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immigration mechanic to move pops to colonial provinces. You are currently focusing state to STATE (internal) migration.;;;;;;;;;;;;;x
