--- a/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -1595,12 +1595,12 @@ CPL_prussian_constitutionalism;Królestwo Kongresowe;x;
 CPL_hms_government;Królestwo Kongresowe;x;
 CPL_democracy;Rzeczpospolita Kongresowa;x;
 CPL_proletarian_dictatorship;Polska Rzeczpospolita Ludowa;x;
-CPL_presidential_dictatorship;Rzeczpospolita Kongresowa;x;
+CPL_presidential_dictatorship;Tymczasowy Rzad Narodowy;x;
 CPL_bourgeois_dictatorship;Rzeczpospolita Kongresowa;x;
 CPL_fascist_dictatorship;Rzeczpospolita Kongresowa;x;
-CPL_colonial_company;Rzeczpospolita Kongresowa;x;
+CPL_colonial_company;Tsárstvo Pólskoye;x;
 CPL_rus_colonial_company;Rzeczpospolita Kongresowa;
-CPL_dominion;Rzeczpospolita Kongresowa;x;
+CPL_dominion;Tsárstvo Pólskoye;x;
 CPL_ADJ;Polacy;x;
 ##### CRB #####;
 CRB_absolute_monarchy;Dominion of the Caribbean;x;
@@ -3076,17 +3076,17 @@ IRQ_colonial_company;Mahmiat al-Iraq;x;
 IRQ_dominion;Mahmiat al-Iraq;x;
 IRQ_ADJ;Iraqiun;x;
 ##### ISR #####;
-ISR_absolute_monarchy;Mind Yisra'el;x;
-ISR_prussian_constitutionalism;Mind Yisra'el;x;
-ISR_hms_government;Mind Yisra'el;x;
+ISR_absolute_monarchy;Mamlekhet Yisra'el;x;
+ISR_prussian_constitutionalism;Mamlekhet Yisra'el;x;
+ISR_hms_government;Mamlekhet Yisra'el;x;
 ISR_democracy;Medinat Yisra'el;x;
-ISR_proletarian_dictatorship;Medinat Komonisti Yisra'el;x;
+ISR_proletarian_dictatorship;Yisra'el Komunistit;x;
 ISR_presidential_dictatorship;Medinat Yisra'el;x;
 ISR_bourgeois_dictatorship;Medinat Yisra'el;x;
-ISR_fascist_dictatorship;Yisra'el Rebti;x;
-ISR_colonial_company;Slita Yisra'el;x;
-ISR_dominion;Slita Yisra'el;x;
-ISR_ADJ;Yisra'elim;x;
+ISR_fascist_dictatorship;Yisra'el HaShlema;x;
+ISR_colonial_company;Yisra'el;x;
+ISR_dominion;Yisra'el;x;
+ISR_ADJ;Yisra'eli;x;
 ##### ITA #####;
 ITA_absolute_monarchy;Regno d'Italia;x;
 ITA_prussian_constitutionalism;Regno d'Italia;x;
