--- a/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -1585,7 +1585,7 @@ COU_proletarian_dictatorship;Kurzemes Socialistiska Republika;x;
 COU_presidential_dictatorship;Kurzemes Republika;x;
 COU_bourgeois_dictatorship;Kurzemes Republika;x;
 COU_fascist_dictatorship;Kuršu Republika;x;
-COU_colonial_company;Kurzemes Protektorats;x;
+COU_colonial_company;Kurlyandskaya Guberniya;x;
 COU_rus_colonial_company;Kurzemes Guberna;x;
 COU_dominion;Kurzemes Protektorats;x
 COU_ADJ;Kuršu;x;
@@ -3937,7 +3937,7 @@ LIV_proletarian_dictatorship;Livonijas Komunistiska Republika;x;
 LIV_presidential_dictatorship;Livonijas Republika;x;
 LIV_bourgeois_dictatorship;Livonijas Republika;x;
 LIV_fascist_dictatorship;Liela Livonijas Valsts;x;
-LIV_colonial_company;Livonijas Protektorats;x;
+LIV_colonial_company;Liflyandskaja Gubernija;x;
 LIV_rus_colonial_company;Livonijas Guberna;x;
 LIV_dominion;Livonijas Protektorats;x
 LIV_ADJ;Libiešu;x;
@@ -6525,7 +6525,7 @@ STH_proletarian_dictatorship;Eesti Sotsialistlik Vabariik;x;
 STH_presidential_dictatorship;Vaba Eesti Vabariik;x;
 STH_bourgeois_dictatorship;Vaba Eesti Vabariik;x;
 STH_fascist_dictatorship;Vaba Eesti Vabariik;x;
-STH_colonial_company;Eesti Protektoraat;x;
+STH_colonial_company;Estlyandskaja Gubernija;x;
 STH_rus_colonial_company;Eestimaa Kubermang;x;
 STH_dominion;Eesti Protektoraat;x
 STH_ADJ;Eesti;x;
@@ -6782,8 +6782,8 @@ TCA_proletarian_dictatorship;Zakavkazskaya Sotsialisticheskaya Federativnaya Res
 TCA_presidential_dictatorship;Kavkazskaya Federatsiya;x;
 TCA_bourgeois_dictatorship;Kavkazskaya Konfederatsiya;x;
 TCA_fascist_dictatorship;Gosudarstvo Bol'shogo Kavkaza;x;
-TCA_colonial_company;Kavkaz Namestnik;x;
-TCA_dominion;Kavkaz Namestnik;x;
+TCA_colonial_company;Kavkazskoye namestnichestvo;x;
+TCA_dominion;Kavkazskoye namestnichestvo;x;
 TCA_ADJ;Zakavkazskiy;x;
 ##### TEX #####;
 TEX_absolute_monarchy;Kingdom of Texas;x;
