Yet another round of china balances.

--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -17,7 +17,7 @@ explosives;Explosives;;;;;;;;;;;;;x
 fabric;Textiles;;;;;;;;;;;;;x
 fertilizer;Fertilizer;;;;;;;;;;;;;x
 fish;Fish;;;;;;;;;;;;;x
-fruit;Fruit;;;;;;;;;;;;;x
+fruit;Produce;;;;;;;;;;;;;x
 fuel;Petroleum Fuel;;;;;;;;;;;;;x
 furniture;Furniture;;;;;;;;;;;;;x
 glass;Glass;;;;;;;;;;;;;x
