--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -198,7 +198,8 @@ caudillo_leaders_desc;A caudillo is a type of militia leader with a charismatic 
 central_american_ai;AI: Central America;;;;;;;;;;;;;x
 central_bank_established;Central Bank;;;;;;;;;;;;;x
 central_bank_established_desc;Our government’s central bank maintains a strict monopoly on the issuance of currency.;;;;;;;;;;;;;x
-china_isolationism;Chinese Isolationism;;;;;;;;;;;;;x
+china_isolationism;Isolationism;;;;;;;;;;;;;x
+china_isolationism_desc;We are better alone!;;;;;;;;;;;;;x
 chinese_floods;Provincial Floods;;;;;;;;;;;;;x
 chinese_substate;Qing Oppression;;;;;;;;;;;;;x
 chinese_substate_desc;The oppression by the Qing Emperor has left our nation in disarray.;;;;;;;;;;;;;x
