--- a/TGC/localisation/00_decisions-options.csv
+++ b/TGC/localisation/00_decisions-options.csv
@@ -9,6 +9,8 @@ option_disable_bankruptcy_events_desc;Disabling the Bankruptcy events will stop 
 option_disable_bankruptcy_events_title;Option: Disable Bankruptcy Events;;;;;;;;;;;;;x
 option_disable_colonial_railroading_desc;Within TGC are a number of flavour events and decisions which help both the AI and the player to follow a historical colonisation path in Africa and Asia. You may prefer to play without these leading to more unpredictable colonisation.;;;;;;;;;;;;;x
 option_disable_colonial_railroading_title;Option: Disable Colonial Railroading;;;;;;;;;;;;;x
+option_colonial_cassus_belli_africa_enabled_desc; This will enable you (and the AI) to justify protectorates/concessions on bordering or port uncivilized countries. By default, this is present, but only for 1 state tags.;;;;;;;;;;;;;x
+option_colonial_cassus_belli_africa_enabled_title;Option: Enable Early Colonial CBs;;;;;;;;;;;;;x
 option_disable_commiemod_desc;The Commie Mod content is a bit volatile and buggy at the moment so it is disabled by default, if you desperately want to try it out you can enable it here. Bug reports about it are still welcome please just don't complain how it broke your game.;;;;;;;;;;;;;x
 option_disable_commiemod_title;Option: Enable Commie Mod;;;;;;;;;;;;;x
 option_disable_easter_eggs_desc;Easter Egg events are flavor events that don't impact the game in any real way but serve to just be something interesting to see in specific circumstances.;;;;;;;;;;;;;x
