--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1398,3 +1398,7 @@ rgo_boycott_modifier_desc;They are refusing to work!;;;;;;;;;;;;;x
 religious_insurrection;Religious Insurrection;;;;;;;;;;;;;x
 religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
+bank_timer;Bank cooldown.;;;;;;;;;;;;;x
+univerisity_timer;University cooldown.;;;;;;;;;;;;;x
+bank_timer_desc;A new Bank has been built.;;;;;;;;;;;;;x
+univerisity_timer_desc;A new University has been built.;;;;;;;;;;;;;x
