--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -3289,7 +3289,7 @@ LEDGER_STATE_NAME;State;État;;;;;;;;;;;;x
 LESS_AMOUNT_OF_SHIPS;Less amount of ships than: §Y$COUNT$§W \n;;;;;;;;;;;;;x
 LESS_THAN; less than; moins de; geringer als;;;;;;;;;;;x
 LEVEL_WITH;with;avec;;;;;;;;;;;;x
-LIFE_NEEDS;Life Needs;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
+LIFE_NEEDS;Basic Needs;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
 LIFE_TR;Life rating at least §Y$VAL$§W.\n;Habitabilité d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
 LIFERATING_EFFECT;$DIRECTION$ $VALUE$ Life rating\n;Habitabilité $DIRECTION$ $VALUE$\n;;;;;;;;;;;;x
 LIKELY_REBELS;Likely Rebels;Probablement rebelles;;;;;;;;;;;;x
@@ -3691,7 +3691,7 @@ MODIFIER_MAX_TARIFF;Maximum Tariff;Tarif maximum;;;;;;;;;;;;x
 MODIFIER_MAX_TAX;Maximum Tax;Impôt maximum;;;;;;;;;;;;x
 MODIFIER_MIDDLE_EVERYDAY_NEEDS;Everyday Needs for Middle Strata;Besoins quotidiens des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MIDDLE_INCOME_MODIFIER;Middle Strata Income;Revenus des classes moyennes;;;;;;;;;;;;x
-MODIFIER_MIDDLE_LIFE_NEEDS;Life Needs for Middle Strata;Besoins vitaux des classes moyennes;;;;;;;;;;;;x
+MODIFIER_MIDDLE_LIFE_NEEDS;Basic Needs for Middle Strata;Besoins vitaux des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MIDDLE_LUXURY_NEEDS;Luxury Needs for Middle Strata;Besoins de luxe des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MIDDLE_VOTE;Middle Vote;Vote des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MILITARY_MAINTENANCE;Military Maintenance;Maintenance militaire;;;;;;;;;;;;x
@@ -3724,7 +3724,7 @@ MODIFIER_PENSION_LEVEL;Pension Level;Niveau de pension;;;;;;;;;;;;x
 MODIFIER_POLITICAL_REFORM_DESIRE;Political Reform Desire;Désir de réforme politique;;;;;;;;;;;;x
 MODIFIER_POOR_EVERYDAY_NEEDS;Everyday Needs for Poor Strata;Besoins quotidiens des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POOR_INCOME_MODIFIER;Poor Strata Income;Revenus des classes défavorisées;;;;;;;;;;;;x
-MODIFIER_POOR_LIFE_NEEDS;Life Needs for Poor Strata;Besoins vitaux des classes défavorisées;;;;;;;;;;;;x
+MODIFIER_POOR_LIFE_NEEDS;Basic Needs for Poor Strata;Besoins vitaux des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POOR_LUXURY_NEEDS;Luxury Needs for Poor Strata;Besoins de luxe des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POOR_SAVINGS_MODIFIER;Poor Savings;Piètre épargne;;;;;;;;;;;;x
 MODIFIER_POOR_VOTE;Poor Vote;Vote des classes défavorisées;;;;;;;;;;;;x
@@ -3744,7 +3744,7 @@ MODIFIER_RGO_OUTPUT;RGO Output;Rendement EAM;;;;;;;;;;;;x
 MODIFIER_RGO_THROUGHPUT;RGO Throughput;Débit EAM;;;;;;;;;;;;x
 MODIFIER_RICH_EVERYDAY_NEEDS;Everyday Needs for Rich Strata;Besoins quotidiens des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RICH_INCOME_MODIFIER;Rich Strata Income;Revenus des classes supérieures;;;;;;;;;;;;x
-MODIFIER_RICH_LIFE_NEEDS;Life Needs for Rich Strata;Besoins vitaux des classes supérieures;;;;;;;;;;;;x
+MODIFIER_RICH_LIFE_NEEDS;Basic Needs for Rich Strata;Besoins vitaux des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RICH_LUXURY_NEEDS;Luxury Needs for Rich Strata;Besoins de luxe des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RICH_VOTE;Rich Vote;Vote des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RULING_PARTY_SUPPORT;Ruling Party Support;Soutien du parti au pouvoir;;;;;;;;;;;;x
@@ -4630,7 +4630,7 @@ POP_DEMOTION;§Y$NUM$§W people will demote to §Y$TYPE$§W each month;§Y$NUM$§W per
 POP_DEMOTION_FACTORS;Demotion factors:;Facteur de rétrogradation : ;Degradierungsfaktoren:;;;;;;;;;;;x
 POP_DEMOTION_TARGET;Change employment to:;Changer d'emploi pour : ;Arbeit ändern zu:;;;;;;;;;;;x
 POP_DETAIL_EVERYDAYNEEDS;Everyday Needs;Besoins quotidiens;;;;;;;;;;;;x
-POP_DETAIL_LIFENEEDS;Life Needs;Besoins vitaux;;;;;;;;;;;;x
+POP_DETAIL_LIFENEEDS;Basic Needs;Besoins vitaux;;;;;;;;;;;;x
 POP_DETAIL_LUXUARYNEEDS;Luxury Needs;Besoins de luxe;;;;;;;;;;;;x
 POP_DETAILS_BANK;Savings:;Épargne :;;;;;;;;;;;;x
 POP_DETAILS_COLONIAL_MIGRATION;Colonial migration:;Migration coloniale :;;;;;;;;;;;;x
@@ -4715,7 +4715,7 @@ POPV_SORT_BY_CON;Consciousness;Conscience;;;;;;;;;;;;x
 POPV_SORT_BY_EVERY;Fulfilment of Everyday Needs;Accomplissement des besoins quotidiens;;;;;;;;;;;;x
 POPV_SORT_BY_IDE;Ideologies;Idéologies;;;;;;;;;;;;x
 POPV_SORT_BY_ISS;Issues;Problèmes;;;;;;;;;;;;x
-POPV_SORT_BY_LIFE;Fulfilment of Life Needs;Accomplissement des besoins vitaux;;;;;;;;;;;;x
+POPV_SORT_BY_LIFE;Fulfilment of Basic Needs;Accomplissement des besoins vitaux;;;;;;;;;;;;x
 POPV_SORT_BY_LIT;Literacy;Alphabétisation;;;;;;;;;;;;x
 POPV_SORT_BY_LUXURY;Fulfilment of Luxury Needs;Accomplissement des besoins de luxe;;;;;;;;;;;;x
 POPV_SORT_BY_MIL;Militancy;Militantisme;;;;;;;;;;;;x
@@ -5493,7 +5493,7 @@ SOLDIER_TO_POP_LOSS_TECH;Military Hospitals;Hôpitaux militaires;;;;;;;;;;;;x
 SOLMP_DETAILS;There is currently §Y$CURRENT$§W brigades recruited from this province, and the soldier pops can support §Y$ALLOWED$§W brigades at maximum.;Actuellement, §Y$CURRENT$§W régiments ont été recrutés dans cette province et les soldats peuvent soutenir §Y$ALLOWED$§W régiments au maximum.;;;;;;;;;;;;x
 SOLMP_NO_SOLDIER_POPS;There are no soldier pops in this province that can be recruited for troops.;Ce POP ne compte pas de soldats susceptibles d'être recrutés.;;;;;;;;;;;;x
 SOLMP_OVER_RECRUITED;This province has no longer the amount of soldier pops needed to support the troops it has raised.;Ce POP ne compte plus assez de soldats pour remplir les remplir les rangs de ses troupes.;;;;;;;;;;;;x
-SOME_LIFE_NEEDS;Life Needs partly fulfilled;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
+SOME_LIFE_NEEDS;Basic Needs partly fulfilled;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
 SOMEONE_HAS_ADDED_STATUS_QUO;We cannot add a war goal if someone has added a §YStatus Quo§W war goal;Nous ne pouvons pas ajouter d’objectif de guerre si quelqu’un a ajouté l’objectif de guerre: §YStatu Quo§W.;;;;;;;;;;;;x
 SORT_BY;Sort by:;;;;;;;;;;;;;x
 SORT_BY_INFRA;Sort by average state infrastructure;Classer par infrastructure d'État moyenne;;;;;;;;;;;;x
