--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2322,16 +2322,14 @@ remove_central_american_cores_desc;The states in or bordering Central America ha
 remove_central_american_cores_title;Autonomy in the Central American States;;;;;;;;;;;;;x
 remove_fifth_pillar_desc;The opponents of the state have bidden their time to long—they must be crushed!;;;;;;;;;;;;;x
 remove_fifth_pillar_title;Crush the Fifth Column of resistance!;;;;;;;;;;;;;x
-remove_kebab_desc;We must remove the Turks to make our nation strong and glorious, these disgusting Turkish people only inhibit our ability to govern effectively.;;;;;;;;;;;;;x
-remove_kebab_title;Remove the Turks!;;;;;;;;;;;;;x
+remove_undesireables_desc;Liberation is upon us, we must send the Turks back to where they came from.;;;;;;;;;;;;;x
+remove_undesireables_title;Remove the Turks!;;;;;;;;;;;;;x
 remove_landlords_desc;Description goes here.;;;;;;;;;;;;;x
 remove_landlords_title;Remove Landlords;;;;;;;;;;;;;x
 unite_peru_desc;With the end of the South/North Peru division, these olds boundaries become useless. It’s time to end the notion of a separated Peru.;;;;;;;;;;;;;x
 unite_peru_title;Unite Peru;;;;;;;;;;;;;x
 remove_any_french_cores_desc;Make sure France has all her correct cores when switching tags.;;;;;;;;;;;;;x
 remove_any_french_cores_title;AI: Fix French Cores;;;;;;;;;;;;;x
-remove_undesireables_desc;Our country has been plagued for far too long by people not of our culture. These people are bringing down our economy, causing all our problems, and are the source of all our woes. We should institute a program to remove these people from our glorious country.;;;;;;;;;;;;;x
-remove_undesireables_title;Enact Integration Policy;;;;;;;;;;;;;x
 removing_neuchatel_cores_desc;A looming crisis over Neuchatel didn’t escalate and it was resolved on our favour. The Germans waived their claims on the canton, which became an integral part of Switzerland.;;;;;;;;;;;;;x
 removing_neuchatel_cores_title;The Neuchatel Crisis;;;;;;;;;;;;;x
 renew_alliance_british_india_desc;We should renew our alliances with our Indian Princely Vassals.;;;;;;;;;;;;;x
