--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -636,8 +636,8 @@ kalmar_union;Kalmar Union;;;;;;;;;;;;;x
 kalmar_union_desc;We have agreed in principle to a closer bond with the other Scandinavian nations.;;;;;;;;;;;;;x
 karadzic_reforms;Karadzic Reforms;;;;;;;;;;;;;x
 karadzic_reforms_desc;Vuk Karadzic has reformed language education in our schools. Our children can now learn the Serbian language more easily than before.;;;;;;;;;;;;;x
-kebabbies;Integration Policy;;;;;;;;;;;;;x
-kebabbies_desc;Our policy to remove untoward elements in our country has proved successful, but new immigrants or acquisitions to the nation have not forgotten. Our core population, however, is experiencing a new state of euphoria.;;;;;;;;;;;;;x
+remove_undesireables;Integration Policy;;;;;;;;;;;;;x
+remove_undesireables_desc;The violence unleashed by liberation wars against Muslim inhabitants of our lands is still felt today.;;;;;;;;;;;;;x
 kettler_denkmal;Memorial to Foreign Diplomat;;;;;;;;;;;;;x
 kettler_denkmal_desc;This memorial to a foreign diplomat stands as a permanent reminder to our people that our independence is being sold short by our government.;;;;;;;;;;;;;x
 kiel_canal;Kiel Canal;;;;;;;;;;;;;x
