--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -294,7 +294,7 @@ RUS_943;Smolensk;;;;;;;;;;;;;x
 RUS_947;Mogilev;;;;;;;;;;;;;x
 AUS_950;Karpatenukraine;;;;;;;;;;;;;x
 RUS_954;Podol'ia;;;;;;;;;;;;;x
-RUS_958;Kyiv;;;;;;;;;;;;;x
+RUS_958;Kiev;;;;;;;;;;;;;x
 RUS_959;Volyn;;;;;;;;;;;;;x
 RUS_962;Chernigov;;;;;;;;;;;;;x
 RUS_964;Krym;;;;;;;;;;;;;x
