govt changes, gambia, tobago port, more loc

--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -1232,3 +1232,54 @@ EVTDESC500176;Our dominant influence in the affairs of the Ottoman Empire has no
 EVTDESC500188;The Russian Empire now fully controls the Black Sea, and many territories beyond it. As our borders expand southwards ever further, so too does the focus shift away from the North and our old capital in St Petersburg. While Tsar Peter's idea was grand, and served Russia well in circumstances it found itself, building a grand new city on the banks of the Baltic Sea and finally establishing firm trading connections with the West, our Baltic ports are only good enough for a little more than 6 months per year, as over winter, they freeze and commerce stops. Ever more, our shipping companies trade through our southern warm ports, such as Odessa and Sevastopol, and from recently, Constantinople. As the focus of the industry shifts southwards towards the Donetskiy ugolny basseyn, the infrastructure around it, the ports on the Black Sea, railways we are building all over the South and its burgeoning industry, perhaps the center of administration and utmost authority should follow this trend too. If the Tsar so wishes, he may pick a new capital for our nation.;;;;;;;;;;;;;x
 EVTDESC500189;Referring to the destruction of the Theodosian Hagia Sophia and comparing the new church with the old, in 532 Procopius lauded the Justinianic building, writing in his work: "... the Emperor Justinian built not long afterwards a church so finely shaped, that if anyone had enquired of the Christians before the burning if it would be their wish that the church should be destroyed and one like this should take its place, shewing them some sort of model of the building we now see, it seems to me that they would have prayed that they might see their church destroyed forthwith, in order that the building might be converted into its present form." ... Procopius, De aedificiis, I.1.22–23. I wonder, would he say the same of us today?;;;;;;;;;;;;;x
 EVTOPTA500189;Justinian.. have I surpassed thee?;;;;;;;;;;;;;x
+courland_gambia_title;Curonian Gambia;;;;;;;;;;;;;x
+courland_gambia_desc;Jacob Kettler, Duke of Courland from 1642 to 1682, engaged in several attempts at colonization, one of which was the land around the province of Banjul in the Gambia. The fledgling colony had many troubles until it was stolen by the Dutch and subsequently by the British, the French, Swedish and many others until it came back to British hands. As our standing and influences in the international community grows, we can now demand the masters of the Gambia to hand over their Gambian colony on the basis of the first ownership act. Our control of Courland-Semigallia allows us to lay claims on it. And if they do not hand it back, we would have a very valid casus belli against them. Alternatively, we could make them a nice offer of 250,000?for the whole colony and obtain it peacefully.;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666111;Curonian Gambia - Demanding the Colony;;;;;;;;;;;;;x
+EVTDESC666666111;A $FROMCOUNTRY$ diplomat has recently approached us demanding we hand over the colony of Banjul in Gambia, on the basis of being its first owners, which dates all the way back to the 1650's. This is surprising as the area has been contested several times, but given our standing in the international stage we should be able to easily fend them off... Unless that is, they decide to use it as a casus belli to rip it off our hands. What shall we do?;;;;;;;;;x
+EVTOPTA666666111;We cannot risk more war.;;;;;;;;;;;;;x
+EVTOPTB666666111;Never! The Gambia has always been ours.;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666112;Curonian Gambia - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666112;The $FROMCOUNTRY_ADJ$ have decided to hand over our rightful colony in the Gambia!;;;;;;;;;;;;;x
+EVT666666112OPTA;Great!;;;;;;;;;;;;;x
+EVTNAME666666113;Curonian Gambia - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666113;The $FROMCOUNTRY_ADJ$ diplomats state that the Gambia is and shall always be $FROMCOUNTRY_ADJ$;;;;;;;;;;;;;x
+EVT666666113OPTA;Then blood shall be shed!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+baltic_concessions;The Baltic Concessions;;;;;;;;;;;;;x
+russification_of_the_baltic_states;Russification of the Baltic States;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+courland_tobago_title;The Tobago Purchase;;;;;;;;;;;;;x
+courland_tobago_desc;From 1654 to around 1689, the Island of Tobago of the Lesser Antilles belonged to the Colony of New Courland until a series of unfortunate events forced the Duchy to sell it to the British, who are to this very day the masters of the Island. Indeed ripping it off the hands of the British will be difficult, but we could obtain it by making a high enough offer... If not, we have a valid casus belli to make it ours once more. The story of Colony of New Courland is a sad one, but by placing it within our grasp once again we could amend the hardships the colonists suffered way back then. Though its climate might not be the best, as the island is located within the Atlantic Hurricane Belt, locals and botanists alike describe it as a "Tropical Paradise" when it's not being ravaged by storms.;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666114;The Tobago Purchase;;;;;;;;;;;;;x
+EVTDESC666666114;$FROMCOUNTRY$ has approached our government officials with quite a distinct proposition: The purchase of the Island of Tobago. They are offering an estimated value of 100,000?for the whole island. And while this might seem like a great deal for us, we cannot forget the fact that we would be helping a rising Great Power consolidate itself as a possible competitor in the Colonizing stage.;;;;;;;;;;;;;x
+EVT666666114OPTA;It matters not, 100,000?is 100,000?;;;;;;;;;;;;;x
+EVT666666114OPTB;Never!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666115;The Tobago Purchase - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666115;Government officials have come back from $FROMCOUNTRY$ with great news! They have acceded to the sale of Tobago!;;;;;;;;;;;;;x
+EVT666666115OPTA;Hurray!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666116;The Tobago Purchase - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666116;Government officials have come back from $FROMCOUNTRY$ with bad news! They have refused to sell Tobago!;;;;;;;;;;;;;x
+EVT666666116OPTA;Curses!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666117;Curonian Gambia - The Gambian Purchase;;;;;;;;;;;;;x
+EVTDESC666666117;Jacob Kettler, Duke of Courland from 1642 to 1682, engaged in several attempts at colonization, one of which was the land around the province of Banjul in the Gambia. The fledgling colony had many troubles until it was stolen by the Dutch and subsequently by the British, the French, Swedish and many others until it came back to British hands. As our standing and influences in the international community grows, we can now demand the masters of the Gambia to hand over their Gambian colony on the basis of the first ownership act. Our control of Courland-Semigallia allows us to lay claims on it. And if they do not hand it back, we would have a very valid casus belli against them. Alternatively, we could make them a nice offer of 250,000?for the whole colony and obtain it peacefully.;;;;;;;;;;;;;x
+EVT666666117OPTA;Demand it back, it IS still ours!;;;;;;;;;;;;;x
+EVT666666117OPTB;Make an offer of 250,000?;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666118;The Gambian Purchase;;;;;;;;;;;;;;x
+EVTDESC666666118;$FROMCOUNTRY$ has approached our government officials with quite a distinct proposition: The purchase of the Colony of Gambia. They are offering an estimated value of 150,000?for the whole colony. And while this might seem like a great deal for us, we cannot forget the fact that we would be helping a rising Great Power consolidate itself as a possible competitor in the Colonizing stage.;;;;;;;;;;;;;x
+EVTOPTA666666118;It matters not, 250,000?is 250,000?;;;;;;;;;;;;;x
+EVTOPTB666666118;Never!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666119;The Gambian Purchase - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666119;Government officials have come back from $FROMCOUNTRY$ with great news! They have acceded to the sale of the Colony of Gambia!;;;;;;;;;;;;;x
+EVT666666119OPTA;Hurray!;;;;;;;;;;;;;x
+#;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666120;The Gambian Purchase - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
+EVTDESC666666120;Government officials have come back from $FROMCOUNTRY$ with bad news! They have refused to sell the Colony of Gambia!;;;;;;;;;;;;;x
+EVT666666120OPTA;Curses!;;;;;;;;;;;;;x
