--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -23,6 +23,7 @@ new_world_nation;New World Nation;;;;;;;;;;;;;x
 pol_reform_blocker;Political Reform Blocker;;;;;;;;;;;;;x
 post_colonial_country;Former Colony;;;;;;;;;;;;;x
 PRU_willem_i_alliance;Dutch-Prussian Alliance;;;;;;;;;;;;;x
+russification_of_the_baltic_states;Russification of the Baltic States;;;;;;;;;;;;;x
 serfdom_not_abolished;Serfdom not abolished;;;;;;;;;;;;;x
 slave_revolution;Slave Revolution;;;;;;;;;;;;;x
 soc_reform_blocker;Social Reform Blocker;;;;;;;;;;;;;x
