--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -2328,7 +2328,7 @@ EVENTHAPPENUS_HEADER;The Foreign Ministry reports;;;;;;;;;;;;;x
 EVENTHAPPENUS_LOG;Event: '$EVENT$' for player.;Événement : '$EVENT$' pour le joueur.;;;;;;;;;;;;x
 EVENTHAPPENUS_MAP;*;*;*;;;;;;;;;;;x
 EVENTHAPPENUS_SETUP;When a historical event happens to us.;Si un événement historique se produit pour nous.;;;;;;;;;;;;x
-EVERYDAY_NEEDS;Everyday Needs;Besoins quotidiens;Alltagsbedürfnisse;;;;;;;;;;;x
+EVERYDAY_NEEDS;Ordinary Provisions;Besoins quotidiens;Alltagsbedürfnisse;;;;;;;;;;;x
 EXECUTING_HISTORY;Executing History;;;;;;;;;;;;;x
 EXILED_DESC;This unit is §Rexiled§!, as it's in foreign territory during peacetime without military access. Exiled units cannot engage in combat, and their scouting abilities are reduced, but they are able to march home through foreign territory. Return your unit to the nearest owned province!;;;;;;;;;;;;;x
 EXISTS; exists; existe; existiert;;;;;;;;;;;x
@@ -3289,7 +3289,7 @@ LEDGER_STATE_NAME;State;État;;;;;;;;;;;;x
 LESS_AMOUNT_OF_SHIPS;Less amount of ships than: §Y$COUNT$§W \n;;;;;;;;;;;;;x
 LESS_THAN; less than; moins de; geringer als;;;;;;;;;;;x
 LEVEL_WITH;with;avec;;;;;;;;;;;;x
-LIFE_NEEDS;Basic Needs;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
+LIFE_NEEDS;Elementary Necessities;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
 LIFE_TR;Life rating at least §Y$VAL$§W.\n;Habitabilité d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
 LIFERATING_EFFECT;$DIRECTION$ $VALUE$ Life rating\n;Habitabilité $DIRECTION$ $VALUE$\n;;;;;;;;;;;;x
 LIKELY_REBELS;Likely Rebels;Probablement rebelles;;;;;;;;;;;;x
@@ -3337,7 +3337,7 @@ LOST_NATIONAL_PROVINCES_ATLEAST_TRIGGER;§Y$COUNTRY$§W has lost at least §Y$VALUE
 LOST_NATIONAL_PROVINCES_NOT_TRIGGER;§Y$COUNTRY$§W has not lost §Y$VALUE$%§W national provinces §W.\n;§Y$COUNTRY$§W n'a pas perdu §Y$VALUE$%§W provinces nationales §W.\n;;;;;;;;;;;;x
 LOST_PLAYER;A player was lost…;Un joueur a été perdu…;;;;;;;;;;;;x
 LOST_PLR;Lost Player;Joueur perdu;;;;;;;;;;;;x
-LUXURY_NEEDS;Luxury Needs;Besoins de luxe;Luxusbedürfnisse;;;;;;;;;;;x
+LUXURY_NEEDS;Extravagant Paraphernalia;Besoins de luxe;Luxusbedürfnisse;;;;;;;;;;;x
 M_GOTO_BUTTON;Find Country or Province;Trouver un pays ou une province;;;;;;;;;;;;x
 M_HOME_BUTTON;Go to Capital Province;Se rendre à la capitale de la province;;;;;;;;;;;;x
 M_LEDGER_BUTTON;Ledger;Statistiques;;;;;;;;;;;;x
@@ -3689,10 +3689,10 @@ MODIFIER_MAX_MILITARY_SPENDING;Maximum Military Spending;Dépenses militaires max
 MODIFIER_MAX_SOCIAL_SPENDING;Maximum Social Spending;Dépenses sociales maximum;;;;;;;;;;;;x
 MODIFIER_MAX_TARIFF;Maximum Tariff;Tarif maximum;;;;;;;;;;;;x
 MODIFIER_MAX_TAX;Maximum Tax;Impôt maximum;;;;;;;;;;;;x
-MODIFIER_MIDDLE_EVERYDAY_NEEDS;Everyday Needs for Middle Strata;Besoins quotidiens des classes moyennes;;;;;;;;;;;;x
+MODIFIER_MIDDLE_EVERYDAY_NEEDS;Ordinary Provisions for Middle Strata;Besoins quotidiens des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MIDDLE_INCOME_MODIFIER;Middle Strata Income;Revenus des classes moyennes;;;;;;;;;;;;x
-MODIFIER_MIDDLE_LIFE_NEEDS;Basic Needs for Middle Strata;Besoins vitaux des classes moyennes;;;;;;;;;;;;x
-MODIFIER_MIDDLE_LUXURY_NEEDS;Luxury Needs for Middle Strata;Besoins de luxe des classes moyennes;;;;;;;;;;;;x
+MODIFIER_MIDDLE_LIFE_NEEDS;Elementary Necessities for Middle Strata;Besoins vitaux des classes moyennes;;;;;;;;;;;;x
+MODIFIER_MIDDLE_LUXURY_NEEDS;Extravagant Paraphernalia for Middle Strata;Besoins de luxe des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MIDDLE_VOTE;Middle Vote;Vote des classes moyennes;;;;;;;;;;;;x
 MODIFIER_MILITARY_MAINTENANCE;Military Maintenance;Maintenance militaire;;;;;;;;;;;;x
 MODIFIER_MIN_MILITARY_SPENDING;Minimum Military Spending;Dépenses militaires minimum;;;;;;;;;;;;x
@@ -3722,10 +3722,10 @@ MODIFIER_OVERSEAS_PRODUCTION_PENALTY;Overseas Factory/RGO penalty: $VALUE$;Usine
 MODIFIER_PEACETIME_MANPOWER_ROTATION;Peacetime Manpower Rotation;Rotation de la main-d'œuvre en temps de paix;;;;;;;;;;;;x
 MODIFIER_PENSION_LEVEL;Pension Level;Niveau de pension;;;;;;;;;;;;x
 MODIFIER_POLITICAL_REFORM_DESIRE;Political Reform Desire;Désir de réforme politique;;;;;;;;;;;;x
-MODIFIER_POOR_EVERYDAY_NEEDS;Everyday Needs for Poor Strata;Besoins quotidiens des classes défavorisées;;;;;;;;;;;;x
+MODIFIER_POOR_EVERYDAY_NEEDS;Ordinary Provisions for Poor Strata;Besoins quotidiens des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POOR_INCOME_MODIFIER;Poor Strata Income;Revenus des classes défavorisées;;;;;;;;;;;;x
-MODIFIER_POOR_LIFE_NEEDS;Basic Needs for Poor Strata;Besoins vitaux des classes défavorisées;;;;;;;;;;;;x
-MODIFIER_POOR_LUXURY_NEEDS;Luxury Needs for Poor Strata;Besoins de luxe des classes défavorisées;;;;;;;;;;;;x
+MODIFIER_POOR_LIFE_NEEDS;Elementary Necessities for Poor Strata;Besoins vitaux des classes défavorisées;;;;;;;;;;;;x
+MODIFIER_POOR_LUXURY_NEEDS;Extravagant Paraphernalia for Poor Strata;Besoins de luxe des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POOR_SAVINGS_MODIFIER;Poor Savings;Piètre épargne;;;;;;;;;;;;x
 MODIFIER_POOR_VOTE;Poor Vote;Vote des classes défavorisées;;;;;;;;;;;;x
 MODIFIER_POP_CONSCIOUSNESS_MODIFIER;Local Consciousness;Conscience locale;;;;;;;;;;;;x
@@ -3742,10 +3742,10 @@ MODIFIER_RESERVES_PENALTY_SIZE;Reserves Penalty Impact;Impact de la pénalité sur
 MODIFIER_RGO_INPUT;RGO Input;Matières premières EAM;;;;;;;;;;;;x
 MODIFIER_RGO_OUTPUT;RGO Output;Rendement EAM;;;;;;;;;;;;x
 MODIFIER_RGO_THROUGHPUT;RGO Throughput;Débit EAM;;;;;;;;;;;;x
-MODIFIER_RICH_EVERYDAY_NEEDS;Everyday Needs for Rich Strata;Besoins quotidiens des classes supérieures;;;;;;;;;;;;x
+MODIFIER_RICH_EVERYDAY_NEEDS;Ordinary Provisions for Rich Strata;Besoins quotidiens des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RICH_INCOME_MODIFIER;Rich Strata Income;Revenus des classes supérieures;;;;;;;;;;;;x
-MODIFIER_RICH_LIFE_NEEDS;Basic Needs for Rich Strata;Besoins vitaux des classes supérieures;;;;;;;;;;;;x
-MODIFIER_RICH_LUXURY_NEEDS;Luxury Needs for Rich Strata;Besoins de luxe des classes supérieures;;;;;;;;;;;;x
+MODIFIER_RICH_LIFE_NEEDS;Elementary Necessities for Rich Strata;Besoins vitaux des classes supérieures;;;;;;;;;;;;x
+MODIFIER_RICH_LUXURY_NEEDS;Extravagant Paraphernalia for Rich Strata;Besoins de luxe des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RICH_VOTE;Rich Vote;Vote des classes supérieures;;;;;;;;;;;;x
 MODIFIER_RULING_PARTY_SUPPORT;Ruling Party Support;Soutien du parti au pouvoir;;;;;;;;;;;;x
 MODIFIER_SELF_UNCIV_ECONOMIC;Economic reform cost;Coût de la réforme économique;;;;;;;;;;;;x
@@ -5493,7 +5493,7 @@ SOLDIER_TO_POP_LOSS_TECH;Military Hospitals;Hôpitaux militaires;;;;;;;;;;;;x
 SOLMP_DETAILS;There is currently §Y$CURRENT$§W brigades recruited from this province, and the soldier pops can support §Y$ALLOWED$§W brigades at maximum.;Actuellement, §Y$CURRENT$§W régiments ont été recrutés dans cette province et les soldats peuvent soutenir §Y$ALLOWED$§W régiments au maximum.;;;;;;;;;;;;x
 SOLMP_NO_SOLDIER_POPS;There are no soldier pops in this province that can be recruited for troops.;Ce POP ne compte pas de soldats susceptibles d'être recrutés.;;;;;;;;;;;;x
 SOLMP_OVER_RECRUITED;This province has no longer the amount of soldier pops needed to support the troops it has raised.;Ce POP ne compte plus assez de soldats pour remplir les remplir les rangs de ses troupes.;;;;;;;;;;;;x
-SOME_LIFE_NEEDS;Basic Needs partly fulfilled;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
+SOME_LIFE_NEEDS;Elementary Necessities partly fulfilled;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
 SOMEONE_HAS_ADDED_STATUS_QUO;We cannot add a war goal if someone has added a §YStatus Quo§W war goal;Nous ne pouvons pas ajouter d’objectif de guerre si quelqu’un a ajouté l’objectif de guerre: §YStatu Quo§W.;;;;;;;;;;;;x
 SORT_BY;Sort by:;;;;;;;;;;;;;x
 SORT_BY_INFRA;Sort by average state infrastructure;Classer par infrastructure d'État moyenne;;;;;;;;;;;;x
