--- a/TGC/localisation/00_eventsanonplaceholder.csv
+++ b/TGC/localisation/00_eventsanonplaceholder.csv
@@ -199,6 +199,9 @@ EVTNAME666666123;Uprising in $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666123;Our fellow Poles in $FROMCOUNTRY$ have risen up in arms against their oppressors!;;;;;;;;;x
 EVT666666123OPTA;Interesting...;;;;;;;;;x
 #;;;;;;;;;;;;;;;;;;;;;;;;;x
+EVTNAME666666123;Uprising in $FROMCOUNTRY$;;;;;;;;;x
+EVTDESC666666123;There is trouble brewing in $FROMCOUNTRY$! $FROMCOUNTRY$ is ready to dispatch additional police and military units to clamp down on the disorder. We should monitor what goes on with our Polish brethren here closely!;;;;;;;;;x
+EVT666666123OPTA;Interesting...;;;;;;;;;x
 courland_tobago_title;The Tobago Purchase;;;;;;;;;x
 courland_tobago_desc;From 1654 to around 1689, the Island of Tobago of the Lesser Antilles belonged to the Colony of New Courland until a series of unfortunate events forced the Duchy to sell it to the British, who are to this very day the masters of the Island. Indeed ripping it off the hands of the British will be difficult, but we could obtain it by making a high enough offer... If not, we have a valid casus belli to make it ours once more. The story of Colony of New Courland is a sad one, but by placing it within our grasp once again we could amend the hardships the colonists suffered way back then. Though its climate might not be the best, as the island is located within the Atlantic Hurricane Belt, locals and botanists alike describe it as a "Tropical Paradise" when it's not being ravaged by storms.;;;;;;;;;x
 #;;;;;;;;;;;;;;;;;;;;;;;;;x
