--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -1273,7 +1273,7 @@ EVT500227OPTA;Demand it back, it IS still ours!;;;;;;;;;;;;;x
 EVT500227OPTB;Make an offer of 250,000?;;;;;;;;;;;;;x
 EVTNAME500228;The Gambian Purchase;;;;;;;;;;;;;;x
 EVTDESC500228;$FROMCOUNTRY$ has approached our government officials with quite a distinct proposition: The purchase of the Colony of Gambia. They are offering an estimated value of 150,000?for the whole colony. And while this might seem like a great deal for us, we cannot forget the fact that we would be helping a rising Great Power consolidate itself as a possible competitor in the Colonizing stage.;;;;;;;;;;;;;x
-EVTOPTA500228;It matters not, 250,000?is 250,000?;;;;;;;;;;;;;x
+EVTOPTA500228;It matters not, 250,000 is 250,000?;;;;;;;;;;;;;x
 EVTOPTB500228;Never!;;;;;;;;;;;;;x
 EVTNAME500229;The Gambian Purchase - The $FROMCOUNTRY_ADJ$ Response;;;;;;;;;;;;;x
 EVTDESC500229;Government officials have come back from $FROMCOUNTRY$ with great news! They have acceded to the sale of the Colony of Gambia!;;;;;;;;;;;;;x
