--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -35,3 +35,13 @@ using_foreign_artillery;Using Foreign Artillery;;;;;;;;;;;;;x
 vote_reform_blocker;Voting Reform Blocker;;;;;;;;;;;;;x
 yes_to_congo;Voted Yes in the Congo Question;;;;;;;;;;;;;x
 zaire_master;Owns the Congo;;;;;;;;;;;;;x
+krakow_uprising;Krakow Uprising Happened;;;;;;;;;x
+krakow_succeeded;Krakow Uprising Succeeded;;;;;;;;;x
+greater_poland_uprising;Greater Poland Uprising Happened;;;;;;;;;x
+greater_poland_succeeded;Greater Poland Uprising Succeeded;;;;;;;;;x
+january_uprising_happened;Congress Poland Uprising Happened;;;;;;;;;x
+through_january_uprising;Through the Congress Poland Uprising;;;;;;;;;x
+january_uprising_succeeded;Congress Poland Uprising Succeeded;;;;;;;;;x
+crimean_war;Crimean War Happened;;;;;;;;;x
+treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
+treaty_of_paris_russia;Treaty of Paris and Ayvansaray - Russia won Crimean War;;;;;;;;;x
