--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1406,3 +1406,7 @@ bank_timer;Bank cooldown.;;;;;;;;;;;;;x
 univerisity_timer;University cooldown.;;;;;;;;;;;;;x
 bank_timer_desc;A new Bank has been built.;;;;;;;;;;;;;x
 univerisity_timer_desc;A new University has been built.;;;;;;;;;;;;;x
+central_ukraine_modifier;Central Ukrainian Mineral Basin;;;;;;;;;x
+central_ukraine_modifier_desc;The mineral basin, located in the eponymous region, is very rich in coal and other useful minerals.;;;;;;;;;x
+donbass_modifier;The Donbass;;;;;;;;;x
+donbass_modifier_desc;The Donbass, short for Donets Basin, is an area centered around the Donets River. Preliminary explorations have shown that this basin is one of the richest in the world. With billions of tonnes of coal to supply our nation for more the decades to come.;;;;;;;;;x
