--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -2328,7 +2328,7 @@ EVENTHAPPENUS_HEADER;The Foreign Ministry reports;;;;;;;;;;;;;x
 EVENTHAPPENUS_LOG;Event: '$EVENT$' for player.;Événement : '$EVENT$' pour le joueur.;;;;;;;;;;;;x
 EVENTHAPPENUS_MAP;*;*;*;;;;;;;;;;;x
 EVENTHAPPENUS_SETUP;When a historical event happens to us.;Si un événement historique se produit pour nous.;;;;;;;;;;;;x
-EVERYDAY_NEEDS;Basic Needs;Besoins quotidiens;Alltagsbedürfnisse;;;;;;;;;;;x
+EVERYDAY_NEEDS;Everyday Needs;Besoins quotidiens;Alltagsbedürfnisse;;;;;;;;;;;x
 EXECUTING_HISTORY;Executing History;;;;;;;;;;;;;x
 EXILED_DESC;This unit is §Rexiled§!, as it's in foreign territory during peacetime without military access. Exiled units cannot engage in combat, and their scouting abilities are reduced, but they are able to march home through foreign territory. Return your unit to the nearest owned province!;;;;;;;;;;;;;x
 EXISTS; exists; existe; existiert;;;;;;;;;;;x
@@ -3289,7 +3289,7 @@ LEDGER_STATE_NAME;State;État;;;;;;;;;;;;x
 LESS_AMOUNT_OF_SHIPS;Less amount of ships than: §Y$COUNT$§W \n;;;;;;;;;;;;;x
 LESS_THAN; less than; moins de; geringer als;;;;;;;;;;;x
 LEVEL_WITH;with;avec;;;;;;;;;;;;x
-LIFE_NEEDS;Life Needs;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
+LIFE_NEEDS;Elementary Necessities;Besoins vitaux;Grundbedürfnisse;;;;;;;;;;;x
 LIFE_TR;Life rating at least §Y$VAL$§W.\n;Habitabilité d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
 LIFERATING_EFFECT;$DIRECTION$ $VALUE$ Life rating\n;Habitabilité $DIRECTION$ $VALUE$\n;;;;;;;;;;;;x
 LIKELY_REBELS;Likely Rebels;Probablement rebelles;;;;;;;;;;;;x
@@ -3337,7 +3337,7 @@ LOST_NATIONAL_PROVINCES_ATLEAST_TRIGGER;§Y$COUNTRY$§W has lost at least §Y$VALUE
 LOST_NATIONAL_PROVINCES_NOT_TRIGGER;§Y$COUNTRY$§W has not lost §Y$VALUE$%§W national provinces §W.\n;§Y$COUNTRY$§W n'a pas perdu §Y$VALUE$%§W provinces nationales §W.\n;;;;;;;;;;;;x
 LOST_PLAYER;A player was lost…;Un joueur a été perdu…;;;;;;;;;;;;x
 LOST_PLR;Lost Player;Joueur perdu;;;;;;;;;;;;x
-LUXURY_NEEDS;Luxury Needs;Besoins de luxe;Luxusbedürfnisse;;;;;;;;;;;x
+LUXURY_NEEDS;Extravagant Paraphernalia;Besoins de luxe;Luxusbedürfnisse;;;;;;;;;;;x
 M_GOTO_BUTTON;Find Country or Province;Trouver un pays ou une province;;;;;;;;;;;;x
 M_HOME_BUTTON;Go to Capital Province;Se rendre à la capitale de la province;;;;;;;;;;;;x
 M_LEDGER_BUTTON;Ledger;Statistiques;;;;;;;;;;;;x
