--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -824,7 +824,7 @@ BUDGET_SLIDER_SOCIAL_SPENDING;Social Spending: §Y$VAL$§W;Dépenses sociales : §Y$
 BUDGET_SOCIAL_SPEND_DESC;;;;;;;;;;;;;;x
 BUDGET_STOCKPILE_YESTERDAYS;Yesterday's purchases for stockpile:;Achats d'hier pour les réserves :;;;;;;;;;;;;x
 BUDGET_STRATA_NEED;§Y$VAL$§W% are getting their $TYPE$;§Y$VAL$§W % reçoivent leur(s) $TYPE$;;;;;;;;;;;;x
-BUDGET_STRATA_NO_NEED;§Y$VAL$§W% are getting none of their needs.;§Y$VAL$§W % n'ont aucun de leurs besoins satisfaits.;;;;;;;;;;;;x
+BUDGET_STRATA_NO_NEED;§Y$VAL$§W% are starving.;§Y$VAL$§W % n'ont aucun de leurs besoins satisfaits.;;;;;;;;;;;;x
 BUDGET_SUPPLYCOSTS;Supply Costs: §Y$VAL$§W;Frais d'approvisionnement : §Y$VAL$§W;;;;;;;;;;;;x
 BUDGET_TAKE_LOAN;Take Loan;Souscrire un emprunt;;;;;;;;;;;;x
 BUDGET_TARIFF_DESC;;;;;;;;;;;;;;x
@@ -5493,7 +5493,7 @@ SOLDIER_TO_POP_LOSS_TECH;Military Hospitals;Hôpitaux militaires;;;;;;;;;;;;x
 SOLMP_DETAILS;There is currently §Y$CURRENT$§W brigades recruited from this province, and the soldier pops can support §Y$ALLOWED$§W brigades at maximum.;Actuellement, §Y$CURRENT$§W régiments ont été recrutés dans cette province et les soldats peuvent soutenir §Y$ALLOWED$§W régiments au maximum.;;;;;;;;;;;;x
 SOLMP_NO_SOLDIER_POPS;There are no soldier pops in this province that can be recruited for troops.;Ce POP ne compte pas de soldats susceptibles d'être recrutés.;;;;;;;;;;;;x
 SOLMP_OVER_RECRUITED;This province has no longer the amount of soldier pops needed to support the troops it has raised.;Ce POP ne compte plus assez de soldats pour remplir les remplir les rangs de ses troupes.;;;;;;;;;;;;x
-SOME_LIFE_NEEDS;Elementary Necessities partly fulfilled;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
+SOME_LIFE_NEEDS;Basic Needs partly fulfilled, and are not eating properly;Besoins vitaux partiellement satisfaits;;;;;;;;;;;;x
 SOMEONE_HAS_ADDED_STATUS_QUO;We cannot add a war goal if someone has added a §YStatus Quo§W war goal;Nous ne pouvons pas ajouter d’objectif de guerre si quelqu’un a ajouté l’objectif de guerre: §YStatu Quo§W.;;;;;;;;;;;;x
 SORT_BY;Sort by:;;;;;;;;;;;;;x
 SORT_BY_INFRA;Sort by average state infrastructure;Classer par infrastructure d'État moyenne;;;;;;;;;;;;x
