Event loc and pictures, more modifiers, 4 emperors

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -926,8 +926,10 @@ opened_frontiers;Opened Frontiers;;;;;;;;;;;;;x
 organic_work;Organic Work;;;;;;;;;;;;;x
 organic_work_desc;A movement dedicated to work as a form of resistance operates in this province.;;;;;;;;;;;;;x
 orleans_growth;New Orleans Growing;;;;;;;;;;;;;x
-orthodoxy_autocracy_nationality;Orthodoxy, Autocracy and Nationality!;;;;;;;;;;;;;x
-orthodoxy_autocracy_nationality_desc;The Official Nationality policy entered into effect and it’s speeding up the assimilation of other cultures at the cost of some unrest.;;;;;;;;;;;;;x
+orthodoxy_autocracy_nationality;Orthodoxy, Autocracy, Nationality!;;;;;;;;;;;;;x
+orthodoxy_autocracy_nationality_desc;The Official Nationality policy is aimed towards Orthodox primacy, safekeeping the absolutism, and loyalty to the Tsar;;;;;;;;;;;;;x
+gendarme_of_europe;Gendarme of Europe;;;;;;;;;;;;;x
+gendarme_of_europe_desc;It is upon us to safeguard the Autocracy of Europe. We have justified Casus Bellis on revolutionary nations!;;;;;;;;;;;;;x
 otto_von_bismarck;Otto von Bismarck;;;;;;;;;;;;;x
 otto_von_bismarck_desc;The current Chancellor of our nation, von Bismarck is a remarkable statesman… perhaps one of the finest our nation will ever know.;;;;;;;;;;;;;x
 ottoman_bank;Osmanli Bankasi;;;;;;;;;;;;;x
