Serfdom in Austria, Greek Uniates (ROM, BYE, UKR), pol fixes

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3154,3 +3154,5 @@ polish_foreign_intervention_title;Plead for Foreign Aid;;;;;;;;;x
 polish_foreign_intervention_desc;As the war rages on, our top politicians have decided to request for both diplomatic and logistical aid to several Great Powers, whoever responds positively to our cause shall stand with us. With any luck, we'll find ourselves an ally amongst them.;;;;;;;;;x
 polish_foreign_intervention2_title;Plead for Foreign Aid;;;;;;;;;x
 polish_foreign_intervention2_desc;As the war rages on, our top politicians have decided to request for both diplomatic and logistical aid to several Great Powers, whoever responds positively to our cause shall stand with us. With any luck, we'll find ourselves an ally amongst them.;;;;;;;;;x
+incite_galicia_to_revolt_title;Incite Galician Poles to Rebellion!;;;;;;;;;x
+incite_galicia_to_revolt_desc;Krakow fall may have been a step back, but our chance may be now or never! Our Hungarian brothers are revolting in the south, it is time to act! Seize Lwow and Galicia!;;;;;;;;;x
